feat : Problem 7 (SNS)